src/objects/Opportunity/fields/Min_Schedule_Date_from_Product__c.field-meta.xml
<CustomField>
    <fullName>Min_Schedule_Date_from_Product__c</fullName>
    <description>Created by EMD.</description>
    <label>Min Schedule Date from Product</label>
    <summarizedField>OpportunityLineItem.Min_Schedule_Date_Product__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>