src/objects/Opportunity/fields/Named_Place__c.field-meta.xml
<CustomField>
    <fullName>Named_Place__c</fullName>
    <label>Named Place</label>
    <length>28</length>
    <type>Text</type>
</CustomField>