src/objects/Opportunity/fields/Next_12_Months_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_12_Months_Revenue__c</fullName>
    <inlineHelpText>Next 12 Months Revenue from Open Opportunities</inlineHelpText>
    <label>Next 12 Months Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>