src/objects/Opportunity/fields/Next_Action_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Due_Date__c</fullName>
    <label>Next Action Due Date</label>
    <type>Date</type>
</CustomField>