src/objects/Opportunity/fields/No_Of_Products__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Products__c</fullName>
    <defaultValue>1</defaultValue>
    <label>No Of Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>