src/objects/Opportunity/fields/Non_Released_Product__c.field-meta.xml
<CustomField>
    <fullName>Non_Released_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines approval process step</description>
    <label>Non-Released Product</label>
    <type>Checkbox</type>
</CustomField>