src/objects/Opportunity/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>Opp-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>