src/objects/Opportunity/fields/Open_Won_or_Lost__c.field-meta.xml
<CustomField>
    <fullName>Open_Won_or_Lost__c</fullName>
    <description>Created for use in custom Report Type.</description>
    <formula>IF(OR(ISPICKVAL(StageName, &apos;Qualifying&apos;), ISPICKVAL(StageName, &apos;Validating&apos;), ISPICKVAL(StageName, &apos;Discovery&apos;), ISPICKVAL(StageName, &apos;Designing&apos;), ISPICKVAL(StageName, &apos;Cust Engineering Qualifying&apos;), ISPICKVAL(StageName, &apos;Quoting&apos;), ISPICKVAL(StageName, &apos;Final Negotiating&apos;), ISPICKVAL(StageName, &apos;Initiating Purchase&apos;)), &quot;Open&quot;,
IF(OR(ISPICKVAL(StageName,&quot;Closed Won&quot;)), &quot;Won&quot;,
IF(OR(ISPICKVAL(StageName,&quot;Closed Lost&quot;)),&quot;Lost&quot;, &quot;Stage not in formula.&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open, Won, or Lost</label>
    <type>Text</type>
</CustomField>