src/objects/Opportunity/fields/Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_ID__c</fullName>
    <displayFormat>SF-{00000}</displayFormat>
    <label>Opp ID</label>
    <type>AutoNumber</type>
</CustomField>