src/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Auto Number - used to help tie the Sales Quotes in Glovia to SFDC</description>
    <displayFormat>SF-{0}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity #</label>
    <type>AutoNumber</type>
</CustomField>