src/objects/Opportunity/fields/Partials_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Partials_Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partials Permitted</label>
    <type>Checkbox</type>
</CustomField>