src/objects/Opportunity/fields/PBCR__c.field-meta.xml
<CustomField>
    <fullName>PBCR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Partial By Complete Release</inlineHelpText>
    <label>PBCR</label>
    <type>Checkbox</type>
</CustomField>