src/objects/Opportunity/fields/PLC_Gate_Status__c.field-meta.xml
<CustomField>
    <fullName>PLC_Gate_Status__c</fullName>
    <label>PLC Gate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gate-0</fullName>
            </value>
            <value>
                <fullName>Gate-1</fullName>
            </value>
            <value>
                <fullName>Gate-2</fullName>
            </value>
            <value>
                <fullName>Gate-2a</fullName>
            </value>
            <value>
                <fullName>Gate-3</fullName>
            </value>
            <value>
                <fullName>Gate-4</fullName>
            </value>
            <value>
                <fullName>Gate-5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>