src/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Customer purchase order number</description>
    <inlineHelpText>Enter the customer&apos;s PO number, if given.</inlineHelpText>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>