src/objects/Opportunity/fields/Pricing_Exercise__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Exercise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Exercise</label>
    <type>Checkbox</type>
</CustomField>