src/objects/Opportunity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VALMO</fullName>
            </value>
            <value>
                <fullName>VBFFK</fullName>
            </value>
            <value>
                <fullName>VBFFK1</fullName>
            </value>
            <value>
                <fullName>VBIMO</fullName>
            </value>
            <value>
                <fullName>VCUST</fullName>
            </value>
            <value>
                <fullName>VLCHP</fullName>
            </value>
            <value>
                <fullName>VLCHPC</fullName>
            </value>
            <value>
                <fullName>VLCHPQ</fullName>
            </value>
            <value>
                <fullName>VLCLP</fullName>
            </value>
            <value>
                <fullName>VLCQP</fullName>
            </value>
            <value>
                <fullName>VLREP</fullName>
            </value>
            <value>
                <fullName>VMYHD</fullName>
            </value>
            <value>
                <fullName>VOREP</fullName>
            </value>
            <value>
                <fullName>VPDTB</fullName>
            </value>
            <value>
                <fullName>VRL2D</fullName>
            </value>
            <value>
                <fullName>VRLSK</fullName>
            </value>
            <value>
                <fullName>VRLSK1</fullName>
            </value>
            <value>
                <fullName>VRLSK2</fullName>
            </value>
            <value>
                <fullName>VSERV</fullName>
            </value>
            <value>
                <fullName>VSHUL</fullName>
            </value>
            <value>
                <fullName>VSPAR</fullName>
            </value>
            <value>
                <fullName>VXCOL</fullName>
            </value>
            <value>
                <fullName>VXCOl1</fullName>
            </value>
            <value>
                <fullName>VXCOL2</fullName>
            </value>
            <value>
                <fullName>VXFSC</fullName>
            </value>
            <value>
                <fullName>VXFSC1</fullName>
            </value>
            <value>
                <fullName>VXFSC2</fullName>
            </value>
            <value>
                <fullName>VXFSCL</fullName>
            </value>
            <value>
                <fullName>VXPDT</fullName>
            </value>
            <value>
                <fullName>VXPDTN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>