src/objects/Opportunity/fields/Product_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Count__c</fullName>
    <description>Product record count created for/referenced in validation rule that throws an error if Opportunity: Stage is at &quot;Production Quoting&quot; or later in the Sales Process.</description>
    <label>Product Record Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>