src/objects/Opportunity/fields/Product_Record_Count_Text_Copy_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Count_Text_Copy_2__c</fullName>
    <formula>Product_Record_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Record Count- Text Copy 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>