src/objects/Opportunity/fields/QR_Date_Reminder_Option_Days__c.field-meta.xml
<CustomField>
    <fullName>QR_Date_Reminder_Option_Days__c</fullName>
    <inlineHelpText>The value you select will determine the number of days after the Quote Request Date that you will receive a reminder email regarding the quote related to this record.</inlineHelpText>
    <label>QR Date Reminder Option (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>