src/objects/Opportunity/fields/Qual_Required__c.field-meta.xml
<CustomField>
    <fullName>Qual_Required__c</fullName>
    <description>Select YES if this product was quoted as a product to be qualified by the customer.</description>
    <inlineHelpText>Orders where customers are performing qualification (new device or change to existing device). Contract review level 1 will be required.</inlineHelpText>
    <label>Customer Qual Req&apos;d?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>