src/objects/Opportunity/fields/Quote_Validity_Duration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_Duration__c</fullName>
    <defaultValue>&quot;30 Days&quot;</defaultValue>
    <label>Quote Validity Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>