src/objects/Opportunity/fields/REACH__c.field-meta.xml
<CustomField>
    <fullName>REACH__c</fullName>
    <label>REACH</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>