src/objects/Opportunity/fields/Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Date__c</fullName>
    <label>Renewed Date</label>
    <type>Date</type>
</CustomField>