src/objects/Opportunity/fields/Rep_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Firm_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Firm Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Rep Firm value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Sales Rep Firm</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>RepFirmAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>