src/objects/Opportunity/fields/Rep_Outside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Rep_Outside_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep-Outside Sales</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opptys / DRs (Rep-Outside Sales)</relationshipLabel>
    <relationshipName>Opptys_DRs1</relationshipName>
    <type>Lookup</type>
</CustomField>