src/objects/Opportunity/fields/Requested_Information__c.field-meta.xml
<CustomField>
    <fullName>Requested_Information__c</fullName>
    <label>Requested Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>