src/objects/Opportunity/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <label>RFQ#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>