src/objects/Opportunity/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Value does not exist or does not match any RSM.</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>RSM</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>VP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>