src/objects/Opportunity/fields/RSM_Region__c.field-meta.xml
<CustomField>
    <fullName>RSM_Region__c</fullName>
    <formula>SUBSTITUTE(RSM__r.UserRole.Name,&quot;RSM of&quot;,&quot;&quot;)</formula>
    <label>RSM Region</label>
    <type>Text</type>
</CustomField>