src/objects/Opportunity/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <description>Same as Glovia Sales Type field</description>
    <inlineHelpText>Glovia Sales Type.
Definition of AGC codes is located in library on SF.
file name is AGC FY13</inlineHelpText>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10CH - DSP CHINA</fullName>
            </value>
            <value>
                <fullName>10 - DSP</fullName>
            </value>
            <value>
                <fullName>10G - DSP GERMANY</fullName>
            </value>
            <value>
                <fullName>10JP - DSP II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>10VN - DSP DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>15CH - INDUSTRIAL CHINA</fullName>
            </value>
            <value>
                <fullName>15G - INDUSTRIAL GERMANY</fullName>
            </value>
            <value>
                <fullName>15 - INDUSTRIAL</fullName>
            </value>
            <value>
                <fullName>15JP - INDUSTRIAL II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>15VN - INDUSTRIAL DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>20CH - TELECOM CHINA</fullName>
            </value>
            <value>
                <fullName>20G - TELECOM GERMANY</fullName>
            </value>
            <value>
                <fullName>20JP - TELECOM II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>20 - TELECOM</fullName>
            </value>
            <value>
                <fullName>20VN - TELECOM DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>25 - AUTOMOTIVE</fullName>
            </value>
            <value>
                <fullName>25CH - AUTOMOTIVE CHINA</fullName>
            </value>
            <value>
                <fullName>25G - AUTOMOTIVE GERMANY</fullName>
            </value>
            <value>
                <fullName>25JP - AUTOMOTIVE II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>25VN - AUTOMOTIVE DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>30CH - MEDICAL CHINA</fullName>
            </value>
            <value>
                <fullName>30G - MEDICAL GERMANY</fullName>
            </value>
            <value>
                <fullName>30JP - MEDICAL II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>30 - MEDICAL</fullName>
            </value>
            <value>
                <fullName>30VN - MEDICAL DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>35CH - GESTURE RECOGNITION CHINA</fullName>
            </value>
            <value>
                <fullName>35 - GESTURE RECOGNITION</fullName>
            </value>
            <value>
                <fullName>35G - GESTURE RECOGNITION GERMANY</fullName>
            </value>
            <value>
                <fullName>35JP - GESTURE RECOGNITION II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>35VN - GESTURE RECOG DIRECT SHIP FROM VIETNAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>