src/objects/Opportunity/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Used to track the business segment of the opportunity in order to more accurately categorize bookings.</description>
    <inlineHelpText>Enter the business segment of the opportunity in order to categorize for the bookings report.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HighYag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>