src/objects/Opportunity/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx Priority 1</fullName>
            </value>
            <value>
                <fullName>FedEx Priority 2</fullName>
            </value>
            <value>
                <fullName>FedEx SAT First</fullName>
            </value>
            <value>
                <fullName>FedEx SAT Priority</fullName>
            </value>
            <value>
                <fullName>FedEx Standard</fullName>
            </value>
            <value>
                <fullName>FedEx 2 Day AM</fullName>
            </value>
            <value>
                <fullName>FedEx 2 Day</fullName>
            </value>
            <value>
                <fullName>FedEx Express Saver</fullName>
            </value>
            <value>
                <fullName>FedEx Ground</fullName>
            </value>
            <value>
                <fullName>FedEx Intl Economy</fullName>
            </value>
            <value>
                <fullName>FedEx Intl Priority</fullName>
            </value>
            <value>
                <fullName>Hand Carry</fullName>
            </value>
            <value>
                <fullName>Freight Forwarder</fullName>
            </value>
            <value>
                <fullName>LTL Freight Service</fullName>
            </value>
            <value>
                <fullName>UPS Next Day 8:30AM</fullName>
            </value>
            <value>
                <fullName>UPS Next Day Air</fullName>
            </value>
            <value>
                <fullName>UPS Next Day Saver</fullName>
            </value>
            <value>
                <fullName>UPS SAT AM</fullName>
            </value>
            <value>
                <fullName>UPS SAT</fullName>
            </value>
            <value>
                <fullName>UPS 2 Day Air AM</fullName>
            </value>
            <value>
                <fullName>UPS 2 Day Air</fullName>
            </value>
            <value>
                <fullName>UPS 3 Day Select</fullName>
            </value>
            <value>
                <fullName>UPS Ground</fullName>
            </value>
            <value>
                <fullName>UPS Intl Expedited</fullName>
            </value>
            <value>
                <fullName>UPS Intl Express</fullName>
            </value>
            <value>
                <fullName>UPS Intl Saver</fullName>
            </value>
            <value>
                <fullName>UPS Intl Standard</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>