src/objects/Opportunity/fields/Shipping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Comments__c</fullName>
    <inlineHelpText>Use the following codes first, before adding additional Shipping info
PP = Partials Permitted
DNP = Do NOT Partial
DNSE = Do NOT Ship Early
PBCR = Partials By Complete Release
ALSO LIST PAYMENT TERMS FOR ACCOUNTING / SHIPPING</inlineHelpText>
    <label>Shipping Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>