src/objects/Opportunity/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <inlineHelpText>Special instructions to be merged onto NAPO.</inlineHelpText>
    <label>Special Instructions</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>