src/objects/Opportunity/fields/Sum_of_SAM__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_SAM__c</fullName>
    <label>Sum of SAM</label>
    <summarizedField>OpportunityLineItem.SAM__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>