src/objects/Opportunity/fields/SumofASP__c.field-meta.xml
<CustomField>
    <fullName>SumofASP__c</fullName>
    <label>SumofASP</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>