src/objects/Opportunity/fields/Target_Cost__c.field-meta.xml
<CustomField>
    <fullName>Target_Cost__c</fullName>
    <description>The target cost that the Account manager needs to achieve to win the business.</description>
    <inlineHelpText>The target cost that the Account manager needs to achieve to win the business.</inlineHelpText>
    <label>Target Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>