src/objects/Opportunity/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>Pulls from Account.</description>
    <inlineHelpText>This is automatically set to pull the payment terms from the Account.</inlineHelpText>
    <label>Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>