src/objects/Opportunity/fields/Transfer_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Quote_Status__c</fullName>
    <label>Transfer Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer Quote Requested</fullName>
            </value>
            <value>
                <fullName>Quote Submitted to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>