src/objects/Opportunity/fields/Update_Schedule_Dates__c.field-meta.xml
<CustomField>
    <fullName>Update_Schedule_Dates__c</fullName>
    <formula>IF( Min_Schedule_Date_from_Product__c &lt; CloseDate , &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Schedule Dates</label>
    <type>Text</type>
</CustomField>